# MARBLE

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: dataloader.py  map.json  map_description.json  score.json  task.json  url_prefix.json
data/bargaining-data/: readme.md
marble/: README.md  a.py  badsql.txt  create_human_eval.py  dataset.txt  docker-compose.yml  envs.sh  human_eval_research.csv  log.txt  main.py  output.csv  process_result.py  run_3.5.sh  run_4o.sh  run_cleanup.sh  run_coding_task.py  run_demo.sh  run_exp_chain.sh  run_exp_graph.sh  run_exp_graph_3.1_70B.sh  run_exp_graph_3.1_8B.sh  run_exp_graph_3.3_70B.sh  run_exp_star.sh  run_exp_tree.sh  run_llama-3.1-70b.sh  run_llama-3.1-8b.sh  run_llama-3.3-70b.sh  run_llama_all.sh  run_minecraft.py  run_reasoning_ablation.py  script_4_process_unrun.py  try.py
marble/agent/: __init__.py  (+6 more)
multiagent_bench/: README.md
multiagentbench/: jsonl2yaml.py  runjsonl2yaml.sh
result/: reasoning_analysis.yaml
scripts/: ablation_figure.py  align_human_llm_research.py  align_human_llm_werewolf.py  analysis_werewolf_result.py  calculate_collab_score.py  check_human_format.py  eval_script_scoring.py  eval_script_scoring_werewolf.py  eval_script_scoring_werewolf_35.py  eval_script_scoring_werewolf_llama31_8b.py  extract_info_werewolf.py  fix_dir.py  format_human_eval_research.py  format_human_eval_werewolf.py  format_werewolf_result.py  rader_graph.py  run_evaluation.sh  scatter.py  werewolf2csv.py
tests/: test_communication.py  test_engine.py  test_graph.py  test_long_term_memory.py  test_model_prompting.py  test_short_term_memory.py  test_test_embedding.py  test_togetherai_completion.py
(+7767 files in other folders)
