[tool.poetry]
name = "marble"
version = "0.0.1"
description = "A template for python-based research project"
authors = ["Kunlun Zhu <kunlunz2@illinois.edu>"]
license = "Apache 2.0 License"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.9, <3.12"
mypy = "^1.13.0"
beartype = "*"
pydantic = "^2.9.2"
litellm = "^1.52.16"
types-pyyaml = "6.0.12.20240917"
types-requests = "2.32.0.20240914"
scikit-learn = "^1.5.2"
beautifulsoup4 = "^4.12.3"
keybert = "^0.8.5"
arxiv = "^2.1.3"
bs4 = "^0.0.2"
pypdf2 = "^3.0.1"
tqdm = "^4.67.0"
semanticscholar = "^0.8.4"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "*"
nbmake = "*"
types-setuptools = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-asyncio = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
follow_imports = "normal"
strict = true
plugins = ["pydantic.mypy"]
exclude=["marble/environments/db_env_docker/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = [
  "."
]

[tool.codespell]
ignore-words-list = "dout, te, indicies, astroid"
skip = ["data"]

[tool.isort]
profile = "black"
use_parentheses = true
skip_gitignore = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.ruff]
line-length = 88
fix = true
target-version = "py310"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
